# sec_company_facts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/sec_company_facts/: core.py
